[NOID] fix CI errors